docs: 코드만 있고 설명이 없던 문서 65개 보강 (설명 +18만자)
문서 1,156개를 훑어 '코드가 설명의 5배 이상'인 문서 94개를 골라냈다. 그중 47개는 배경/핵심/예시 템플릿을 쓰는데, 같은 템플릿 54개 중 87%가 부실이었다 — 틀만 잡고 코드만 채운 뒤 설명을 안 쓴 문서군이다.

각 문서에 실무에서 실제로 걸리는 함정과 판단 기준을 넣었다. 문서당 평균 2,805자. 장점 나열은 이미 있으니 반복하지 않고, '언제 쓰면 안 되는지'와 '어디서 조용히 깨지는지'를 썼다.

주장은 실행으로 확인한 것만 적었다. 그 과정에서 문서 자체의 오류도 여러 건 잡았다 — Nginx 문서의 동시 접속 수 계산표(리버스 프록시는 요청당 커넥션을 2개 쓴다), 추상 클래스 문서의 기대 출력 주석, String 문서의 truncate 출력값 등.

검증: gen_tags/frontmatter/mermaid/links 전부 통과, FULL_BUILD strict 빌드 경고 0, 새로 추가된 줄 기준 출처 위반 0건. 무출처 수치 주장·추측 표현·AI 클리셰 기계 검사도 통과.